=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.19 - In develoment

=over

=item *

Fixing bug in template editor when code editor (CodePress) is on
that prevented edits after an initial "Save & Stay" from actually
saving. [Michael Peters]

=item *

After a successful login, if we were trying to get someplace else
originally redirect there instead of always taking the user to the
workspace. [Michael Peters]

=item *

L<Krang::FTP::Server> now logs properly in F<logs/krang.log>.
[Daniel S. Sterling]

=item *

L<Krang::FTP::Server> only call binmode utf8 for templates, not for media.
[Daniel S. Sterling]

=item *

C<story> is now passed to a top-level element's C<extension()> and
C<filename()> methods. [Michael Peters]

=item *

Fixed misspelling of F<krang_publish> C<--skip-related-assets> option.
[Michael Peters]

=back

=head2 3.18 - March, 08, 2012

=over

=item *

Templates can now be checked-out in bulk through the UI just like Stories
and Media. [Michael Peters]

=item *

Media Bulk Upload UI now remembers the last category that was used just
like the New Media screen. [Michael Peters]

=item *

Searching for media by filename no longer wild cards non-word characters
since those are important in file names (like ".") [Michael Peters]

=item *

Templates that are deployed from the "Find Templates" screen are
now checked-in if they were checked-out by the person doing the
deployings. This way deploy from "Find Templates" works the same as
deploy from "Edit Template" [Michael Peters]

=item *

Publisher now looks at all the categories for a story in the
C<_add_category_linked_stories()> method. [Brad Oaks]

=item *

Deleting or retiring a story in the UI will now redirect to publish_story_list
if category linked stories need published. [Brad Oaks]

=item *

The Scheduler now checks all instances on startup for jobs with
daemon_uuid reservations that match our hostname.
[Daniel S. Sterling]

=item *
