@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added C<no_anchor> option to L<Krang::Widget::autocomplete_values>.
+[Michael Peters]
+
+=item *
+
 Fixing bug in template editor when code editor (CodePress) is on
 that prevented edits after an initial "Save & Stay" from actually
 saving. [Michael Peters]
